2007-05-21
	* Fix segmentation fault caused by auctions with no bids and a
	  starting bid of $200 or more.

2007-04-30
	* Fix for bug 1710376.  Bid history parsing error on auction with
	  no bids.

2007-04-02
	* Added captcha error.
	* 2.16.1 released.

2007-03-28
	* 2.16.0 released.
	* Add support for bid history without bidder name

2006-12-19
	* Added note about requirement for default column order with -m option.

2006-11-27
	* Fixed buyer & bidding history bug (need to skip over buyer history).
	* Fixed problem with bug reports.  HTTP buffer sometimes overwritten
	  by version number.

2006-11-13
	* Fixed myItems (-m) option.  eBay change tableName to "Id"

2006-11-08
	* Fix handling of URL escapes in username.

2006-11-04
	* 2.15.0 released.
	* Fix bug 1579311 (and a million others), eBay changed the bid history
	  page again.
	* Implemented feature request 1587259, handling -i without username
	  or password.
	* Fix bug 1574881, bid increment comparison not always correct.

2006-09-05
	* Fix for dutch auction parsing?

2006-01-05
	* Fix bug 1352595, esniper does not encode password in URLs

2005-10-19
	* 2.14.0 released.
	* Added version check.
	* Fix bug 1330486, login bug causes crash.

2005-10-12
	* Fix bug 1324457, more detail on URL errors.

2005-10-08
	* 2.13.0 released.
	* Fix bug 1315702, Login failed.

2005-10-04
	* 2.12.0 released.
	* Fix bug 1313556, eBay login change breaks esniper.
	* Fix bug 1275990, pagename MakeBidErrorDutchSameBidQuantity not
	  recognized.

2005-09-19
	* Fix bug 1295057, blocked bid due to bidder location.
	* Fix bug 1282914, blocked bid due to no paypal account.
	* Fix bug 1252037, accept comma in price in auction file.
	* Fix bug 1295198, FreeBSD core dump.

2005-08-07
	* Fix bug 1253692.  Fixed price auction error now handled gracefully.
	* Fix bug 1300111, pagename MakeBidErrorCannotBidOnItem not recognized.

2005-07-24
	* Fix bug 1301934, pagename MakeBidErrorAuctionEnded not recognized.

2005-07-04